<resources>
    <string name="app_name">Trini Hub</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_account_client">AccountClientActivity</string>

    <string name="action_settings">Settings</string>
    <string name="cloud">Cloud</string>
    <string name="settings">Settings</string>
    <string name="type_message_here">Type message here</string>
    <string name="my_contact">My Contact</string>
    <string name="create_channel">Create Channel</string>
    <string name="name_channel">Name Channel</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="mode">Mode</string>
    <string name="mpublic">Public</string>
    <string name="mclosed">Closed</string>
    <string name="provisioning">Provisioning</string>
    <string name="auto_provisioning">Auto Provisioning</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="person">Person</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="nickname">Nickname</string>
    <string name="phone_numbers">Phone numbers</string>
    <string name="personal_numbers">Personal numbers</string>
    <string name="job">Job</string>
    <string name="job_title">Job Title</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgout_your_password">Forgout your password?</string>
    <string name="login">Login</string>
    <string name="create_your_account">Create Your Account?</string>
    <string name="input_your_job">Input Your Job</string>
    <string name="job_titile">Job Titile</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="input_your_first_name">Input Your First Name</string>
    <string name="input_your_last_name">Input Your Last Name</string>
    <string name="input_your_nickname">Input Your Nickname</string>
    <string name="input_yourpersonal_numbers">Input YourPersonal numbers</string>
    <string name="personal_number">Personal Number</string>
    <string name="emails">Emails</string>
    <string name="main_email">Main Email</string>
    <string name="first_email">First Email</string>
    <string name="company">Company</string>
    <string name="work_email">Work Email</string>
    <string name="home_email">Home Email</string>
    <string name="phone">Phone</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="all">All</string>
    <string name="subscribe">Subscribe</string>
    <string name="owned">Owned</string>
    <string name="home">Home</string>
    <string name="meeting">Meeting</string>
    <string name="chat">Chat</string>
    <string name="channel">Channel</string>
    <string name="account">Account</string>
    <string name="global">Global</string>
    <string name="design">Design</string>
    <string name="innovation">Innovation</string>
    <string name="social_media">Social Media</string>
    <string name="business">Business</string>
    <string name="create_new_post">Create new post</string>
    <string name="photo">Photo</string>
    <string name="file">File</string>
    <string name="post">Post</string>
    <string name="update">Update</string>
    <string name="update_post">Update post</string>
    <string name="no_post">No post in this channel yet</string>
    <string name="file_sharing">File Sharing</string>
    <string name="failed_login">Unknown login or wrong password</string>
    <string name="available">data is available</string>
    <string name="success">data succesfull added</string>
    <string name="create_meeting">Create Meeting</string>
    <string name="add_photo">Add Photo</string>
    <string name="title_meet">Title Meet</string>
    <string name="_25_02_2020">25-02-2020</string>
    <string name="_00_00">00:00</string>
    <string name="place_name">Place Name</string>
    <string name="start_time">Start Time</string>
    <string name="time_over">Time Over</string>
    <string name="date">Date</string>
    <string name="permission_image">This application need your permission to access photo gallery</string>
    <string name="error_input">data is still empty</string>
    <string name="general_meeting">general meeting</string>
    <string name="social_service">social service</string>
    <string name="discussion">discussion</string>
    <string name="festival">festival</string>
    <string name="insert_meet_error">connection error or data has a problem</string>
    <string name="planning_to_come">planning to come</string>
    <string name="youre_already_to_come">You already enter this meeting</string>
    <string name="enter_event">enter this event</string>
    <string name="enter_this_meeting">Enter this meeting</string>
    <string name="guest_list">Guest list</string>
    <string name="no">No</string>
    <string name="name">Name</string>
    <string name="enable_camera">You must enable this permission</string>
    <string name="have_entered">You have entered this meeting</string>
    <string name="scan_qr">Scan Qr</string>
    <string name="scane_qr_code_to_enter_n_the_meeting">Scane QR Code to Enter\nthe meeting</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="check_invitation">check invitation</string>
    <string name="today_s_meeting">Upcoming Meeting</string>
</resources>
