<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/shape_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvBarPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:drawablePadding="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/phone_numbers"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:drawablePadding="16dp"
        android:textColor="@color/colorFontAccount2"
        android:text="@string/input_yourpersonal_numbers"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_medium"/>

    <EditText
        android:id="@+id/edtPhoneEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:inputType="phone"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:drawablePadding="16dp"
        android:hint="@string/personal_number"
        android:fontFamily="@font/roboto_medium"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnBottomEditPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:fontFamily="@font/roboto_black"/>

        <Button
            android:id="@+id/btnBottomCancelPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/btnBottomEditPhone"
            android:background="@drawable/shape_button"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:fontFamily="@font/roboto_black"/>
    </RelativeLayout>
</LinearLayout>