<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.account_info.AccountClientActivity"
    tools:showIn="@layout/activity_account_client">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvBarPerson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:drawablePadding="16dp"
                    android:text="@string/person"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto_medium"
                    android:drawableStart="@drawable/ic_person"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:drawablePadding="16dp"
                    android:textColor="@color/colorFontAccount2"
                    android:text="@string/first_name"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto_medium"/>

                <TextView
                    android:id="@+id/tvFirstNameClient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:drawablePadding="16dp"
                    tools:text="taufik"
                    android:fontFamily="@font/roboto_medium"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:drawablePadding="16dp"
                    android:textColor="@color/colorFontAccount2"
                    android:text="@string/last_name"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto_medium"/>

                <TextView
                    android:id="@+id/tvLastNameClient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:drawablePadding="16dp"
                    tools:text="Amaryansyah"
                    android:fontFamily="@font/roboto_medium"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:drawablePadding="16dp"
                    android:textColor="@color/colorFontAccount2"
                    android:text="@string/nickname"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto_medium"/>

                <TextView
                    android:id="@+id/tvNicknameClient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:drawablePadding="16dp"
                    tools:text="taufik21"
                    android:fontFamily="@font/roboto_medium"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvBarEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:drawablePadding="16dp"
                    android:text="@string/emails"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto_medium"
                    android:drawableStart="@drawable/ic_email_white"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:drawablePadding="16dp"
                    android:textColor="@color/colorFontAccount2"
                    android:text="@string/main_email"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto_medium"/>

                <TextView
                    android:id="@+id/tvMainEmailClient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:drawablePadding="16dp"
                    tools:text="taufik.amary@gmail.com"
                    android:fontFamily="@font/roboto_medium"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:drawablePadding="16dp"
                    android:textColor="@color/colorFontAccount2"
                    android:text="@string/first_email"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto_medium"/>

                <TextView
                    android:id="@+id/tvFirstEmailClient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:drawablePadding="16dp"
                    tools:text="taufik.amary@gmail.com"
                    android:fontFamily="@font/roboto_medium"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvBarPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:drawablePadding="16dp"
                    android:text="@string/phone_numbers"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto_medium"
                    android:drawableStart="@drawable/ic_phone_android_white"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:drawablePadding="16dp"
                    android:textColor="@color/colorFontAccount2"
                    android:text="@string/personal_numbers"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto_medium"/>

                <TextView
                    android:id="@+id/tvPhoneClient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:drawablePadding="16dp"
                    tools:text="085210851633"
                    android:fontFamily="@font/roboto_medium"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvBarJob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:drawablePadding="16dp"
                    android:text="@string/job"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto_medium"
                    android:drawableStart="@drawable/ic_work_white"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:drawablePadding="16dp"
                    android:textColor="@color/colorFontAccount2"
                    android:text="@string/job_title"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto_medium"/>

                <TextView
                    android:id="@+id/tvJobTitleClient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:drawablePadding="16dp"
                    tools:text="Enginer"
                    android:fontFamily="@font/roboto_medium"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:drawablePadding="16dp"
                    android:textColor="@color/colorFontAccount2"
                    android:text="@string/company"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto_medium"/>

                <TextView
                    android:id="@+id/tvCompanyClient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:drawablePadding="16dp"
                    tools:text="Enginer Company"
                    android:fontFamily="@font/roboto_medium"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>